--- a/front-end/src/containers/containers.css
+++ b/front-end/src/containers/containers.css
@@ -1,6 +1,3 @@
-.item-tile-parent{
-
-}
 .header-bar-global{
     display: flex;
     justify-content: space-between;
@@ -10,5 +7,15 @@
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: rgb(207, 154, 228);
+    position: sticky;
 
+}
+
+.item-gallery-parent{
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    background-color: aqua;
+    height: 20rem;
+    margin: 2rem;
 }
